# scgt

./: Cargo.toml  output.spwn  syntax.md  test.scgt
src/: error.rs  first parser.rs  helper_functions.rs  main.rs  new parser.rs  parser.rs
src/lex/: mod.rs
src/spwn/: bool.spwn  call.spwn  explicit_print.spwn  get.spwn  invert.spwn  iter.spwn  last.spwn  mod.spwn  mul.spwn  print.spwn  set.spwn  spawn.spwn
src/util/: helpers.rs  mod.rs
