[package]
name = "spwncodegolftest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { version = "1.0.0-alpha.4", features = ["label"] }
ariadne = "0.3.0"
open = "5.0.0"
clap = { version = "4.4.2", features = ["derive"] }
logos = "0.13.0"
